[package]
name = "symfony-dev-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3", features = ["derive"] }
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
lazy_static = "1.4.0"
hyper-tls = "0.5.0"
hyper-rustls = {version = "0.23.2", features = ["webpki-roots"]}
rustls = { version = "0.20.8", features = [ "dangerous_configuration"]}
httproxide-hyper-reverse-proxy = "0.5.2-dev"