[package]
name = "symfony-dev-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3", features = ["derive"] }
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1.17.0", features = ["full"] }
lazy_static = "1.4.0"
bytes = "1"
http-body-util = { version = "=0.1.0-rc.3" }
pin-project-lite = "0.2.4"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false }